get ting those hundos with big links

--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -11,6 +11,10 @@
       height: auto;
       max-width: 100%;
     }
+    a {
+      display: inline-block;
+      padding: 0.5rem 0;
+    }
   </style>
 </head>
 <body>
